# hyprparse

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
hyprparse-js/: Cargo.toml  README.md
hyprparse-js/src/: lib.rs
src/: lib.rs  lib_old.rs  lib_old_old.rs  main.rs
