[package]
name = "hyprparse"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["yavko <yavornkolev@gmail.com>"]
readme = "README.md"
description = "A parser for hypr config files"
homepage = "https://github.com/hyprland-community/hyprparse"
repository = "https://github.com/hyprland-community/hyprparse"
license = "AGPL-3.0-or-later"
metadata.nix.build = true

[profile.release]
opt-level = "z"
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "*"
lazy_static = "1.4"
strum = "0.24"
strum_macros = "0.24"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
