[package]
name = "hyprparse-js"
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["yavko <yavornkolev@gmail.com>"]
readme = "README.md"
description = "A parser for hypr config files, js wasm bindings"
homepage = "https://github.com/hyprland-community/hyprparse"
repository = "https://github.com/hyprland-community/hyprparse"
license = "AGPL-3.0-or-later"
metadata.nix.build = true

[profile.release]
opt-level = "z"
strip = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
hyprparse = { path = "../" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.4"
console_error_panic_hook = "0.1"
